--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-```html
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,11 +7,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./dist/main.css" />
     <script src="./dist/main.js"></script>
+    <script src="https://d3js.org/d3.v4.js"></script>
+    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+    <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
+    <script src="https://d3js.org/topojson.v2.min.js"></script>
+    <script src="neighborhood.js"></script>
     <title>Project Name</title>
 </head>
 
 <body>
+    <h1>House Price in the Bay Area</h1>
+    <svg id="my_dataviz" width="400" height="300"></svg>
+    <script src="index.js"></script>
+    <script src="neighborhood.js"></script>
+        
 </body>
 
 </html>
-```
