enlarged the map

--- a/index.html
+++ b/index.html
@@ -17,10 +17,20 @@
 
 <body>
     <h1>House Price in the Bay Area</h1>
-    <svg id="my_dataviz" width="400" height="300"></svg>
     <script src="index.js"></script>
+    <div class="main-container">
+        <div class="county-container">
+            <h2 id="Bay-counties">Lorem Ipsum is simply dummy text of the printing and typesetting</h2>
+        </div>
+        <div class="right-section-container">
+            <h2 id="right-section-container-header">Generation Details</h2>
+            <h3 id="right-section-container-header-unit">gigawatthours (GWh) = 1 billion watthour</h3>
+            <div class="charts-container">
+                <div class="detail-chart-container"></div>
+            </div>
+        </div>
+    </div>
     <script src="neighborhood.js"></script>
-        
 </body>
 
 </html>
