was able to create range of color and mousever

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./dist/main.css" />
     <script src="./dist/main.js"></script>
-    <script src="https://d3js.org/d3.v4.js"></script>
+    <script src="https://d3js.org/d3.v4.js"></script>  
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
     <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
     <script src="https://d3js.org/topojson.v2.min.js"></script>
@@ -23,8 +23,8 @@
             <h2 id="Bay-counties">Lorem Ipsum is simply dummy text of the printing and typesetting</h2>
         </div>
         <div class="right-section-container">
-            <h2 id="right-section-container-header">Generation Details</h2>
-            <h3 id="right-section-container-header-unit">gigawatthours (GWh) = 1 billion watthour</h3>
+            <h2 id="right-section-container-header">Lorem Ipsum is simply dummy text of the printing and typesetting</h2>
+            <h3 id="right-section-container-header-unit">Lorem Ipsum is simply dummy text of the printing and typesetting</h3>
             <div class="charts-container">
                 <div class="detail-chart-container"></div>
             </div>
