deploy gitHub link

--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
         </div>
     </div>
     <script src="neighborhood.js"></script>
+
+    <footer>
+        <div class="footer">
+            <p>here is my footer</p> 
+        </div>
+       
+    </footer>
 </body>
+
 
 </html>
