--- a/index.html
+++ b/index.html
@@ -1,62 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./dist/main.css" />
-    <link rel="stylesheet" href="mycss.css"/>
+    <link rel="stylesheet" href="mycss.css" />
     <script src="./dist/main.js"></script>
-    <script src="https://d3js.org/d3.v4.js"></script>  
+    <script src="https://d3js.org/d3.v4.js"></script>
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
     <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
     <script src="https://d3js.org/topojson.v2.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js" integrity="sha512-wNH6xsp2n8CfB91nrBtfc4sfLwYPBMjSWVUwQOp60AYYXH6i8yCwuKFZ4rgK2i6pQek/b+bSyR7b01/922IBzQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js"
+      integrity="sha512-wNH6xsp2n8CfB91nrBtfc4sfLwYPBMjSWVUwQOp60AYYXH6i8yCwuKFZ4rgK2i6pQek/b+bSyR7b01/922IBzQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="neighborhood.js"></script>
     <script type="module" src="d3-legend.js"></script>
     <title>Project Name</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>House Price in the Bay Area</h1>
     <script src="index.js"></script>
     <div class="main-container">
-        <div class="county-container">
-            <h2 id="Bay-counties">Lorem Ipsum is simply dummy text of the printing and typesetting</h2>
+      <div class="county-container">
+        <h2 id="Bay-counties">
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+        </h2>
+      </div>
+      <div class="right-section-container">
+        <h2 id="right-section-container-header">
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+        </h2>
+        <h3 id="right-section-container-header-unit">
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+        </h3>
+        <div class="charts-container">
+          <div class="detail-chart-container"></div>
         </div>
-        <div class="right-section-container">
-            <h2 id="right-section-container-header">Lorem Ipsum is simply dummy text of the printing and typesetting</h2>
-            <h3 id="right-section-container-header-unit">Lorem Ipsum is simply dummy text of the printing and typesetting</h3>
-            <div class="charts-container">
-                <div class="detail-chart-container"></div>
-            </div>
-        </div>
+      </div>
     </div>
     <div class="d3-legend">
-        <script type="module" src="d3-legend.js"></script>
+      <script type="module" src="d3-legend.js"></script>
     </div>
     <script src="neighborhood.js"></script>
-    <div class='my-legend'>
-        <div class='legend-title'>Median House Price in Bay Area</div>
-        <div class='legend-scale'>
-            <ul class='legend-labels'>
-                <li><span style='background:#feedde;'></span>less than 600k</li>
-                <li><span style='background:#fdbe85;'></span>600k-900k</li>
-                <li><span style='background:#fd8d3c;'></span>900k- 1.5M</li>
-                <li><span style='background:#d94701;'></span>greater than 1.5M</li>
-
-            </ul>
+    <div class="my-legend">
+      <div class="legend-title">Median House Price in Bay Area</div>
+      <div class="legend-scale">
+        <ul class="legend-labels">
+          <li><span style="background: #feedde"></span>less than 600k</li>
+          <li><span style="background: #fdbe85"></span>600k-900k</li>
+          <li><span style="background: #fd8d3c"></span>900k- 1.5M</li>
+          <li><span style="background: #d94701"></span>greater than 1.5M</li>
+        </ul>
+      </div>
+      <div class="legend-source">
+        Source: <a href="#link to source">Name of source</a>
+      </div>
     </div>
-<div class='legend-source'>Source: <a href="#link to source">Name of source</a></div>
-</div>
     <footer>
-        <div class="footer">
-            <p>here is my footer</p> 
-        </div>
-       
+      <div class="footer">
+        <p>here is my footer</p>
+      </div>
     </footer>
-</body>
-
-
+  </body>
 </html>
