edied some layout

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://d3js.org/d3.v4.js"></script>
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
     <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
+    <script src="https://d3js.org/d3-selection-multi.v1.min.js"></script>
     <script src="https://d3js.org/topojson.v2.min.js"></script>
 
     <script
@@ -24,12 +25,14 @@
   </head>
 
   <body>
+
     <h1>House Price in the Bay Area</h1>
+
     <script src="index.js"></script>
     <div class="main-container">
       <div class="county-container">
         <h2 id="Bay-counties">
-          Lorem Ipsum is simply dummy text of the printing and typesetting
+          Bay Area Counties
         </h2>
       </div>
       <div class="right-section-container">
@@ -43,9 +46,6 @@
           <div class="detail-chart-container"></div>
         </div>
       </div>
-    </div>
-    <div class="d3-legend">
-      <script type="module" src="d3-legend.js"></script>
     </div>
     <script src="neighborhood.js"></script>
     <div class="my-legend">
