--- a/copy.html
+++ b/copy.html
@@ -10,7 +10,7 @@
     <script src="https://d3js.org/d3.v4.js"></script>
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
     <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js" integrity="sha512-wNH6xsp2n8CfB91nrBtfc4sfLwYPBMjSWVUwQOp60AYYXH6i8yCwuKFZ4rgK2i6pQek/b+bSyR7b01/922IBzQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://d3js.org/d3-selection-multi.v1.min.js"></script>
     <script src="https://d3js.org/topojson.v2.min.js"></script>
     <script src="neighborhood.js"></script>
     <title>Bay Area House Price</title>
@@ -20,16 +20,28 @@
 
     <h1>House Price in the Bay Area</h1>
     <script src="index.js"></script>
-
-    <div class="charts-container">
-        <h2>Here is my chart</h2>
-    <script src="poverty.js"></script>
+    <div class="main-container">
+      <div class="county-container">
+        <h2 id="Bay-counties">
+          Bay Area Counties
+        </h2>
+      </div>
+      <div class="right-section-container">
+        <h2 id="right-section-container-header">
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+        </h2>
+        <h3 id="right-section-container-header-unit">
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+        </h3>
+        <div class="charts-container">
+            <script src="poverty.js"></script>
+            <h2>Here is my chart</h2>
+          <div class="detail-chart-container"></div>
+        </div>
+      </div>
     </div>
-
-    <div class="county-container">
-        <h2 id="Bay-counties">Bay Area Counties</h2>
-        <script src="neighborhood.js"></script>
-        <div class="my-legend">
+    <script src="neighborhood.js"></script>
+    <div class="my-legend">
       <div class="legend-title">Median House Price in Bay Area</div>
       <div class="legend-scale">
         <ul class="legend-labels">
@@ -43,15 +55,10 @@
         Source: <a href="https://www.car.org/marketdata/data/countysalesactivity">California Association of Realtors</a>
       </div>
     </div>
-    </div>
-
-    
-    
-  <footer>
-      <div>
+    <footer>
+      <div class="footer">
         <p>here is my footer</p>
       </div>
-  </footer>
+    </footer>
   </body>
-
 </html>
