added animation for bar charts

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <div class="content">
         <div class="content-container">
         <div class="charts-container">
-            <h2>Here is my chart</h2>
+            <h2 >Poverty rate in Bay Area</h2>
+            <h3> The poverty rate in across the United States in 2021 is 13.7% </h3>
             <script src="poverty.js"></script>
         </div> <!--chart-container Div End-->
 
