Edited text in chart legend

--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
             <p>Official poverty rate calculated using the official poverty universe and definition of poverty units.</p>
             <script src="poverty.js"></script>
         <div class='my-legend2'>
-          <div class='legend2-title'>The Title or Explanation of your Map</div>
+          <div class='legend2-title'>Poverty rate in the Bay area</div>
           <div class='legend2-scale'>
             <ul class='legend2-labels'>
               <li><span style='background:#760dff;'></span>CPM Poverty Rate</li>
               <li><span style='background:#0dffdf;'></span>Official Poverty Rate</li>
             </ul>
           </div><!--legend2-scale Div End-->
-        <div class='legend2-source'>Source: <a href="https://www.ppic.org/data-set/poverty-across-california/">Name of source</a></div>
+        <div class='legend2-source'>Source: <a href="https://www.ppic.org/data-set/poverty-across-california/">Public Policy Institute of California</a></div>
         </div><!--my-legend2 Div End-->
         </div> <!--chart-container Div End-->
 
