--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <body>
 
-    <h1>House Price in the Bay Area</h1>
+    <h1>Can you afford house(s) in the Bay?</h1>
     <script src="index.js"></script>
 
     <div class="content">
