--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">    <script src="neighborhood.js"></script>
     <title>Bay Area House Price</title>
+    <link rel="shortcut icon" type="image/jpg" href="images/icons8-house-64.png"/>
   </head>
 
   <body>
