--- a/index.html
+++ b/index.html
@@ -74,8 +74,10 @@
     
   <footer>
       <div class="icons">
-          <a target="_blank" href="#"><i class="fab fa-github-square"></i></a>
-          <a target="_blank" href="#"><i class="fab fa-linkedin"></i></a>
+          <a target="_blank" href="https://github.com/nichathong"><i class="fab fa-github-square"></i></a>
+          <a target="_blank" href="https://www.linkedin.com/in/nicha-thpng/"><i class="fab fa-linkedin"></i></a>
+          <a target="_blank" href=" https://nichathong.github.io/portfolio/"><i class="far fa-id-badge"></i></a>
+          
           <p>Completed by Nicha T.</p>
       </div>
   </footer>
