changeg map color

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./dist/main.css" />
-    <!-- <link rel="stylesheet" href="nichathong/src/styles/mycss.css" /> -->
     <link rel="stylesheet" href="src/styles/mycss.css" />
     <script src="./dist/main.js"></script>
     <script src="https://d3js.org/d3.v4.js"></script>
@@ -55,8 +54,8 @@
           <div class='legend2-title'>Poverty rate in the Bay area</div>
           <div class='legend2-scale'>
             <ul class='legend2-labels'>
-              <li><span style='background:#760dff;'></span>CPM Poverty Rate</li>
-              <li><span style='background:#0dffdf;'></span>Official Poverty Rate</li>
+              <li><span style='background:#939393;'></span>CPM Poverty Rate</li>
+              <li><span style='background:#f08e05;'></span>Official Poverty Rate</li>
             </ul>
           </div><!--legend2-scale Div End-->
         <div class='legend2-source'>Source: <a href="https://www.ppic.org/data-set/poverty-across-california/">Public Policy Institute of California</a></div>
@@ -72,8 +71,8 @@
                 <ul class="legend-labels">
                  <li><span style="background: #feedde"></span>less than 600k</li>
                  <li><span style="background: #fdbe85"></span>600k-900k</li>
-                 <li><span style="background: #fd8d3c"></span>900k- 1.5M</li>
-                 <li><span style="background: #d94701"></span>greater than 1.5M</li>
+                 <li><span style="background: rgb(253, 121, 26)"></span>900k- 1.5M</li>
+                 <li><span style="background: rgb(252, 0, 0);"></span>greater than 1.5M</li>
                 </ul>
                 </div> <!--ledend-scale Div End-->
                 <div class="legend-source">
