--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
 
     <div class="header-box">
       <!-- <hr> -->
-      <h1 class="header-title">The Boring News</h1>
+      <ul class="heading-bar">
+        <li id="first-heading"><p>"Will you be able to afford the house?" `                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             </p></li>
+        <li><h1 class="header-title">The App Academy News</h1></li>      
+        <li id="last-heading"><span>San Francisco</span> Median house prices in those counties were up 532% over the last 30 years. Since spring 2020, median prices were up 20%. <br><span>Source : </span><a id="link-heading"href="https://www.mansionglobal.com/articles/some-san-francisco-bay-area-counties-have-seen-prices-rise-more-than-500-in-last-30-years-01635370302">Link</a></li>
+      </ul>
+      <!-- <h1 class="header-title">The App Academy News</h1> -->
 
       <ul class="nav-links">
         <li> <a href="https://github.com/nichathong">Github</a></li>
