fixed open links in new tab

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
       <!-- <h1 class="header-title">The App Academy News</h1> -->
 
       <ul class="nav-links">
-        <li> <a href="https://github.com/nichathong">Github</a></li>
-        <li> <a href="https://www.linkedin.com/in/nicha-thpng/">LinkedIn</a></li>
-        <li> <a href="https://nichathong.github.io/portfolio/">Portfolio</a></li>
+        <li> <a href="https://github.com/nichathong" target="_blank" rel="noopener noreferrer">Github</a></li>
+        <li> <a href="https://www.linkedin.com/in/nicha-thpng/"target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+        <li> <a href="https://nichathong.github.io/portfolio/"target="_blank" rel="noopener noreferrer">Portfolio</a></li>
         
       </ul>
       <h1 class="title">CAN YOU AFFORD A HOUSE IN THE BAY?</h1>
