--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">    <script src="neighborhood.js"></script>
     <title>Bay Area House Price</title>
     <link rel="shortcut icon" type="image/jpg" href="images/icons8-house-64.png"/>
+    
+     <meta property="og:title" content="Bay Area House Price" />
+     <meta property="og:image" content="./images/Screen Shot 2021-12-03 at 12.05.35 PM.png" />
+     <meta
+       property="og:description"
+       content="Data visualization with the integration of JavaScript and D3.js manipulate geographic data into a map and charts"
+     />
+     <meta
+       property="og:url"
+       content="https://programmer.github.io/project_name"
+     />
   </head>
 
   <body>
