--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     <link rel="shortcut icon" type="image/jpg" href="images/icons8-house-64.png"/>
     
      <meta property="og:title" content="Bay Area House Price" />
-     <meta property="og:image" content="./images/Screen Shot 2021-12-03 at 12.05.35 PM.png" />
+     <meta property="og:image" content="./images/scrnshot-javascript.png" />
      <meta
        property="og:description"
        content="Data visualization with the integration of JavaScript and D3.js manipulate geographic data into a map and charts"
      />
      <meta
        property="og:url"
-       content="https://programmer.github.io/project_name"
+       content="https://nichathong.github.io/Javascript_project/"
      />
   </head>
 
