--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
        property="og:url"
        content="https://nichathong.github.io/Javascript_project/"
      />
+     <meta name="author" content="Nicha Thongpanchang">
   </head>
 
   <body>
